--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -125,7 +125,7 @@
   <button
     class="start-button"
     *ngIf="!isRecording && !blobUrl"
-    (click)="startRecording()"
+    (click)="toggleRecord()"
   >
     Start Recording
   </button>
